[wayland] extension popup are shown at the top left corner
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox99 | --- | unaffected |
firefox100 | --- | verified |
firefox101 | --- | verified |
People
(Reporter: lilydjwg, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
392.22 KB,
image/png
|
Details | |
48 bytes,
text/x-phabricator-request
|
diannaS
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:101.0) Gecko/20100101 Firefox/101.0
Steps to reproduce:
- install an extension
- pin its icon to the overflow menu
- open the overflow menu and click on it
Actual results:
The popup is shown at the top left corner of firefox's window.
Expected results:
The popup should be shown near the overflow icon.
I've got a lot of crashes while doing mozregression. Here's what I can get:
13:18.01 INFO: Last good revision: 867b48058bde75ef267dc0620b39b3398a56989d
13:18.01 INFO: First bad revision: 8a83aa3ec30981da1a9affddb67339f55959e529
13:18.01 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=867b48058bde75ef267dc0620b39b3398a56989d&tochange=8a83aa3ec30981da1a9affddb67339f55959e529
Comment 1•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Assignee | ||
Updated•3 years ago
|
Comment 3•3 years ago
|
||
Set release status flags based on info from the regressing bug 1760276
Assignee | ||
Comment 4•3 years ago
|
||
Assignee | ||
Comment 5•3 years ago
|
||
This is a simple fix so we may uplift it to Beta.
Updated•3 years ago
|
Comment 7•3 years ago
|
||
bugherder |
Comment 8•3 years ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Updated•3 years ago
|
Assignee | ||
Comment 9•3 years ago
|
||
Comment on attachment 9272255 [details]
Bug 1764319 [Wayland] Save initial position from nsWindow::Create() r?emilio
Beta/Release Uplift Approval Request
- User impact if declined: Wrong menu position on Wayland
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Small fix, we save initial popup position for future use.
- String changes made/needed:
Comment 10•3 years ago
|
||
Comment on attachment 9272255 [details]
Bug 1764319 [Wayland] Save initial position from nsWindow::Create() r?emilio
Approved fro 100.0b8
Comment 11•3 years ago
|
||
bugherder uplift |
Updated•3 years ago
|
Updated•3 years ago
|
Comment 12•3 years ago
|
||
Reproduced the issue with Firefox 101.0a1 (2022-04-12) on Ubuntu 21.1.
The issue is verified fixed with Firefox 101.0a1 (2022-04-20) and 100.0b8 on Ubuntu 21.1. The pop-up window for the addons inside the overflow menu is displayed under the overflow icon.
Description
•