Bug 1764319 [Wayland] Save initial position from nsWindow::Create() r=emilio,a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D143692